[NOTEPAD] Printer output improvements by Ricardo Hanke. See CORE-9088 for more details.

svn path=/trunk/; revision=67890